# nopea

./: .gitignore  CLAUDE.md  README.md  mix.exs  sykli.exs
.github/workflows/: ci.yml
alumiini-git/: Cargo.toml
alumiini-git/src/: git.rs  main.rs  protocol.rs
charts/nopea/: values.yaml
charts/nopea/templates/: clusterrole.yaml  deployment.yaml  headless-service.yaml  networkpolicy.yaml  pdb.yaml
config/: runtime.exs  test.exs
docs/adr/: 0001-assessment-refactoring-decisions.md  0002-ai-native-gitops.md  005-git-port-architecture.md  README.md
hack/: dev-cluster.sh
lib/alumiini/: application.ex  applier.ex  git.ex
lib/nopea/: application.ex  applier.ex  cache.ex  controller.ex  distributed_registry.ex  distributed_supervisor.ex  drift.ex  events.ex  git.ex  leader_election.ex  supervisor.ex  webhook.ex  worker.ex
lib/nopea/domain/: commit_sha.ex  resource_key.ex
lib/nopea/git/: behaviour.ex
lib/nopea/git_repository/: parser.ex
lib/nopea/k8s/: behaviour.ex
lib/nopea/sync/: executor.ex  result.ex
lib/nopea/webhook/: router.ex
nopea-git/src/: git.rs  main.rs  protocol.rs
test/: test_helper.exs
test/alumiini/: applier_test.exs  worker_test.exs
test/nopea/: applier_test.exs  cache_test.exs  cluster_mode_test.exs  controller_test.exs  distributed_registry_test.exs  drift_detector_test.exs  drift_test.exs  git_test.exs  leader_election_test.exs  metrics_test.exs  supervisor_test.exs  webhook_test.exs  worker_config_test.exs  worker_config_validation_test.exs  worker_test.exs
test/nopea/domain/: commit_sha_test.exs  resource_key_test.exs
(+1 files in other folders)
